examples/python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: deepu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
