examples/python-web-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: foo.bar.com   # or use AWS ELB DNS until you set DNS
    http:
      paths:
      - path: /vasu
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
